# ecc_key_derivation

./: CMakeLists.txt  ecc.c  ecc.h  main.c  utils.c  utils.h
